# cmake_sample

./: CMakeLists.txt  README.md
custom_library/: CMakeLists.txt
custom_library/include/: custom_lib.h
custom_library/src/: custom_lib.cpp
include/: compute_sd.h  utils.h
src/: test_sd.cpp  utils.cpp
